src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url("https://fonts.googleapis.com/css2?family=Paytone+One&family=Roboto:wght@300;400;500;700&display=swap");
body {
  margin: 0;
  font-family: "Roboto", sans-serif;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--bg-color);
  color: var(--primary-text);
  /* background-color: #151515;
  color: rgb(226, 226, 226); */
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
.font-secondary {
  font-family: "Paytone One", sans-serif;
}

/* For Chrome, EDGE, Opera, Others */
*::-webkit-scrollbar {
  width: 5px;
}

*::-webkit-scrollbar-track {
  background: transparent;
}

*::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.1);
}

